css/focus_page.styl
.focus.page {
  overflow: hidden;
  
  h2 {
    .not-signed-in & .aux {
      display: none;
    }

    .follow-link,
    .share-link {
      display: inline-block;
      position: relative;
      top: -7px;

      button {
        @extends #standard-button;

        &[name="unfollow"] {
          @extends #standard-button:active;
        }
      }
    }
  }
  
  .subjects {
    @extends #rule-below;
    margin-bottom: 30px;
    
    h3{
      position: relative;
      
      .pages {
        position: absolute;
        bottom: 8px;
        right: 0;
      }
    }

    ul {
      margin: 0;
      overflow: hidden;
      padding: 20px 0 20px 20px;

      li {
        box-sizing: border-box;
        float: left;
        list-style: none;
        margin-bottom: 20px;
        padding-right: 20px;
        width: 20%;

        a {
          color: $black;
          display: block;
          position: relative;

          img {
            border: 2px solid $white;
            box-sizing: border-box;
            box-shadow: 0 1px 1px rgba($black, 0.25);
            max-width: 100%;
          }

          .label {
            background: $white;
            border-radius: 3px 0 0 3px;
            bottom: 2px;
            font-size: 10px;
            font-weight: 500;
            padding: 1px 4px;
            position: absolute;
            right: -1px;
          }
        }
      }
    }
  }

  .focus {
    position: relative;
    float: left;
    width: 33%;

    .main {
      max-width: 100%;
    }

    .create-comment {
      background: $blue;
      color: $white;
      margin: 10px 0;
      padding: 1px 10px;

      .not-signed-in & {
        display: none;
      }

      header {
        font-weight: bold;
        margin: 10px 0 -5px;
      }

      .action .characters {
        float: left;
      }
    }
    
    .load-more {
      margin-top: 20px;
    }

    .focus-comments {
      .comment {
        @extends #rule-below;
        padding: 10px;

        footer {
          color: $gray;
        }
      }
    }
  }

  .description {
    box-sizing: border-box;
    float: left;
    margin-bottom: 30px;
    padding-left: 30px;
    width: 33%;
  }

  .collections {
    box-sizing: border-box;
    float: left;
    margin-bottom: 30px;
    padding-left: 30px;
    width: 33%;
   
    h3 {
      position: relative;
      
      .pages {
        position: absolute;
        bottom: 8px;
        right: 0;
      }
    }

    .subjects {
      padding: 0 5px 3px;

      .subject {
        padding: 0 5px;
      }
    }
    
    .list {
      .collection-summary {
        margin-bottom: 10px;
      }
    }
    
    > header {
      @extends #block-header;
    }

    ul {
      margin: 0;
      padding: 0;

      li {
        display: inline-block;
        list-style: none;

        a {
          color: inherit;

          .label {
            font-weight: bold;
          }

          .images {
            display: block;
            margin: 10px 0;
            padding: 0 20px;
            
            img {
              width: 20%;
            }
          }
        }
      }
    }
  }

  .hashtags {
    box-sizing: border-box;
    float: left;
    margin-bottom: 30px;
    padding-left: 30px;
    width: 33%;
    
    h2 {
      display: none;
    }

    hr {
      margin: 10px 0;
    }

    .collect a {
      @extends #standard-button;

      .not-signed-in & {
        display: none;
      }
    }
  }

  .discussions {
    box-sizing: border-box;
    float: right;
    margin-bottom: 30px;
    padding-left: 30px;
    width: 67%;
  }

  &.collection {
    h2 {
      text-align: center;
    }
  }
}

